# letterbox

./: .gitignore  BUGS.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: AGENT_POINTER.md  PROTOCOL.md  SMOKE_CHECKLIST.md
examples/two-claudes-debating/: README.md  letterbox.toml
examples/two-claudes-debating/claude-a/: CLAUDE.md
examples/two-claudes-debating/claude-b/: CLAUDE.md
letterbox/: __init__.py  _update.py  channel.py  cli.py  config.py  launcher.py  locks.py  mcp_server.py  notifications.py  protocol.py  watcher.py
letterbox/adapters/: __init__.py  antigravity.py  base.py  claude.py  gemini.py  mcp_config.py  pty_common.py  vibe.py
letterbox/data/: __init__.py  sample_letterbox.toml  vibe-mcp-bridge.sh
scripts/: lint_ensure_ascii.sh  lint_no_shell_true.sh
skills/letterbox/: SKILL.md
skills/letterbox-setup/: SKILL.md
tests/: __init__.py  conftest.py  fake_harness.py  helpers.py  test_adapters_antigravity.py  test_adapters_base.py  test_adapters_claude.py  test_adapters_gemini.py  test_adapters_mcp_config.py  test_adapters_parametrized.py  test_adapters_vibe.py  test_channel.py  test_cli.py  test_config.py  test_fixtures.py  test_integration_e2e.py  test_launcher.py  test_launcher_e2e.py  test_locks.py  test_mcp_server.py  test_notifications.py  test_output_discipline.py  test_packaging_meta.py  test_performance_budgets_channel.py  test_performance_budgets_e2e.py  test_performance_budgets_protocol.py  test_performance_budgets_watcher.py  test_protocol.py  test_protocol_doc.py  test_pty_common.py  test_sample_project.py  test_smoke.py  test_smoke_checklist.py  test_update_check.py  test_watcher.py
